# explainable-crowdfunding-ml

./: Explanations-Dice.ipynb  Explanations.ipynb  Lime_0.html  Lime_1.html  README.md  explanations.py  main.py  oi.html  prepare_dataset.py  pyproject.toml  requirements.txt  test.py
src/: features.py  models.py
