[project]
name = "explainable-crowdfunding-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "textstat>=0.7.13",
    "xgboost>=3.2.0",
]
