[project]
name = "explainable-crowdfunding-ml"
version = "0.1.0"
description = "Crowdfunding dataset analysis with SHAP, LIME, DICE, and XGBoost"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "textstat>=0.7.13",
    "xgboost>=3.2.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [
    "*.ipynb",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
